# icocoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libicocoinconsensus.pc.in
.tx/: config
build-aux/m4/: icocoin_find_bdb48.m4  icocoin_qt.m4  (+1 more)
contrib/: README.md  icocoin-qt.pro  icocoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  (+15 more)
depends/: README.md  config.site.in  description.md  funcs.mk
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
genesiskey/: alertkey.hex  alertkey.pem  genesiscoinbase.hex  genesiscoinbase.pem  testnetalert.hex  testnetalert.pem
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  dbwrapper.cpp  dbwrapper.h  (+85 more)
src/bench/: .gitignore  Examples.cpp  bench.cpp  bench.h  bench_icocoin.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  icocoin.cpp  icocoin.qrc  icocoin_locale.qrc  icocoinaddressvalidator.cpp  icocoinaddressvalidator.h  icocoinamountfield.cpp  icocoinamountfield.h  icocoingui.cpp  icocoingui.h  icocoinstrings.cpp  icocoinunits.cpp  icocoinunits.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  (+67 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: icocoin_af.ts  icocoin_af_ZA.ts  icocoin_ar.ts  icocoin_be_BY.ts  icocoin_bg.ts  icocoin_bg_BG.ts  icocoin_bs.ts  icocoin_ca.ts  icocoin_ca@valencia.ts  icocoin_ca_ES.ts  icocoin_cs.ts  icocoin_cs_CZ.ts  icocoin_cy.ts  icocoin_da.ts  icocoin_de.ts  icocoin_el.ts  icocoin_el_GR.ts  icocoin_en.ts  icocoin_en_GB.ts  icocoin_eo.ts  icocoin_es.ts  icocoin_es_AR.ts  icocoin_es_CL.ts  icocoin_es_CO.ts  icocoin_es_DO.ts  icocoin_es_ES.ts  icocoin_es_MX.ts  icocoin_es_UY.ts  icocoin_es_VE.ts  icocoin_et.ts  icocoin_eu_ES.ts  icocoin_fa.ts  icocoin_fa_IR.ts  icocoin_fi.ts  icocoin_fr.ts  icocoin_fr_CA.ts  icocoin_fr_FR.ts  icocoin_gl.ts  icocoin_he.ts  icocoin_hi_IN.ts  (+43 more)
src/qt/res/: icocoin-qt-res.rc
src/qt/res/icons/: icocoin.icns
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: icocoinconsensus.cpp  icocoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_icocoin_NativeSecp256k1.c  org_icocoin_NativeSecp256k1.h
src/secp256k1/src/java/org/icocoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  icocoin-util-test.py  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  (+17 more)
src/test/data/: README.md  icocoin-util-test.json  sighash.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+183 files in other folders)
